# PIAPS_project

./: CMakeLists.txt  README.md  imgui.ini  return
include/: CMakeLists.txt  background.h  client.h  clientsocket.h  error.h  events.h  includes.h  inculdes.h  requestmanager.h  requests.h  requestsocket.h  server.h  serversocket.h  socket.h  socketset.h
src/: CMakeLists.txt  background.cpp  client.cpp  clientmain.cpp  clientsocket.cpp  error.cpp  events.cpp  main.cpp  request.cpp  requestmanager.cpp  requestsocket.cpp  server.cpp  servermain.cpp  serversocket.cpp  socket.cpp  socketset.cpp
